# emoji-suggester-mlops-zoomcamp-2025

./: .dockerignore  .gitignore  Dockerfile  README.md  init.sh  makefile  pyproject.toml
.dvc/: config  config.local
.dvc/tmp/: lock
.github/workflows/: ci-cd.yml
data/mock/: mapping.csv  test.csv
data/predictions/: bert_mock.csv  bert_test.csv
data/processed/: test.csv.dvc  train.csv.dvc
data/raw/: Mapping.csv
kind/: config.yaml  pvc.yaml
localstack/: docker-compose.yaml
mlflow/: docker-compose.yaml
src/data/: data_cleanup.py
src/eval/: eval.py
src/prefect-workflows/: pipeline.py  prefect.yaml
src/preprocess/: data_cleanup.py  generate_mock_data.py
src/serving/: predict.py  predict_app.py
src/training/bert/: predict.py  test.py  train.py  utils.py
src/workflows/: airflow.cfg  airflow.db  docker-compose.yaml
src/workflows/config/: airflow.cfg
src/workflows/dags/: preprocess_pipeline.py
src/workflows/dags/bash/: preprocess_pipeline.py  train_bert_model_pipeline.py
src/workflows/dags/kubernetes/: preprocess_pipeline.py  train_bert_model_pipeline.py
tests/: test_api.py  test_utils.py
