[project]
name = "emoji-suggester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "datasets>=3.6.0",
    "dvc-gdrive>=3.0.1",
    "dvc[gs]>=3.60.1",
    "evidently>=0.7.8",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "ruff>=0.12.1",
    "s3fs>=2025.3.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.53.0",
]

[dependency-groups]
dev = [
    "awscli>=1.40.26",
    "awscli-local>=0.22.0",
]
